--- a/localisation/french/MD_focus_ARM_l_french.yml
+++ b/localisation/french/MD_focus_ARM_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- armenia_focus: "Armenian Focus Tree"
+ armenia_focus: "Priorités nationales arménien"
  ARM_Kocharjan: "§YThe era of Kocharyan§!"
  ARM_Kocharjan_desc: "After his predecessor Levon Ter-Petrosyan was ousted as President, Kocharyan was elected Armenia's second President on 30 March 1998, defeating his main rival, Karen Demirchyan (who was a former leader of Soviet Armenia), in an early presidential election marred by irregularities and violations by both sides as reported by international electoral observers."
  ARM_manifestation_power: "Manifestation of Political Power"
