--- a/localisation/french/MD_focus_AZE_l_french.yml
+++ b/localisation/french/MD_focus_AZE_l_french.yml
@@ -1,9 +1,9 @@
 ﻿l_french:
- azerbaijan_focus_historical_early: "Azerbaijan Focus Tree"
- AZE_aze_the_state: "The State"
- AZE_aze_the_state_desc: "Azerbaijan is a young state and its matters are not always as mature as one might think, but they need to be settled still/"
- AZE_aze_the_man: "The Man"
- AZE_aze_the_man_desc: "Aliev is a father of our nation, we need to properly represent that in our media."
+ azerbaijan_focus_historical_early: "Priorités nationales azerbaïdjanaises"
+ AZE_aze_the_state: "L'État"
+ AZE_aze_the_state_desc: "L'Azerbaïdjan est un jeune État et ses questions ne sont pas toujours aussi abouties qu'on pourrait le croire, mais elles doivent quand même être gérées."
+ AZE_aze_the_man: "L'homme"
+ AZE_aze_the_man_desc: "Aliyev est le père de notre nation, nous devons le représenter correctement dans nos médias."
  AZE_aze_pers_cult: "Cult Of Aliev"
  AZE_aze_pers_cult_desc: "Aliev has guided us in the most difficult time it is only right to repay him for what he deserves"
  AZE_aze_oppos_broadcasts: "Target Opposition Broadcasts"
