--- a/localisation/french/MD_focus_BOT_l_french.yml
+++ b/localisation/french/MD_focus_BOT_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- botswana_focus: "Botswana Focus Tree"
+ botswana_focus: "Priorités nationales du Botswana"
  BOT_model_student_of_africa: "Model Student of Africa"
  BOT_model_student_of_africa_desc: "Botswana is one of the most highly developed countries in Africa. Ever since its independence, it has been a stable democracy and has seen very little conflict. Boasting the highest human development index and the lowest perceived corruption in sub-Saharan Africa, Botswana is a shining light for the rest of Africa to follow.\n\n§RIf our §YCorruption Level§! is higher than §Y$widespread_corruption$§! we will lose this bonus!§!"
  BOT_kalahari_expansion: "Kalahari Desertification"
