--- a/localisation/french/MD_focus_BRA_l_french.yml
+++ b/localisation/french/MD_focus_BRA_l_french.yml
@@ -1,19 +1,19 @@
 ﻿l_french:
- BRA_initial_focus: "Brazilian Focus Tree"
- BRA_2002_elections: "The 2002 Elections"
- BRA_2002_elections_desc: "With PSDB's popularity in decline, Lula and Enéas are running a close race with their fast-growing popularities. This election will decide the future of Brazil forever!"
+ BRA_initial_focus: "Priorités nationales brésiliennes"
+ BRA_2002_elections: "Les élections de 2002"
+ BRA_2002_elections_desc: "Avec le déclin du PSDB en popularité, Lula et Enéas sont engagés dans une lutte serrée avec leurs partis montants. Cette élection déterminera le futur du Brésil pour toujours !"
  BRA_lula: "Lula"
- BRA_lula_desc: "Luiz Lula da Silva became the second most voted-for president in history after Ronald Reagan. Can you make the Brazilian people proud as the Workers' Party?"
+ BRA_lula_desc: "Luiz Lula da Silva est devenu le second président élu avec le plus de voix dans l'histoire, non-loin derrière Ronald Reagan. Pourrez-vous rendre le peuple Brésilien fier du parti des travailleurs ?"
  BRA_serra: "Serra"
- BRA_serra_desc: "José Serra, the Cardoso sucessor, became the new president of Brazil. Can you make the Brazilian people proud and correct Cardoso's Mistakes?"
+ BRA_serra_desc: "José Serra, le successeur de Cardoso, est devenu le nouveau président Brésilien. Serez-vous capables de rendre le peuple Brésilien fier, et corriger les erreurs de Cardoso ?"
  BRA_eneas: "Enéas"
- BRA_eneas_desc: "Enéas Carneiro, a Brazilian nationalist who is inspired by the legacy of Getúlio Vargas, is now the president of Brazil. Can he make Brazil a powerful and great nation and transform Brazil into a global superpower?"
+ BRA_eneas_desc: "Enéas Carneiro, un nationaliste Brésilien s'étant inspiré de l'héritage de Getúlio Vargas, est maintenant le président du Brésil. Est-il en mesure de faire du Brésil une grande et puissante nation, et la transformer en superpuissance mondiale ?"
  BRA_nossa_economia: "Nossa Economia"
- BRA_nossa_economia_desc: "The 1997 Asian financial crisis caused a ripple throughout global markets. Brazil's profits from its massive export industry slimmed and Cardoso's policies failed to address the damage quickly. Let us encourage growth to finally reverse the effects of this most unfortunate economic downturn!"
- BRA_the_internal: "Move towards Socialism"
- BRA_the_internal_desc: "Our country is rife with problems. How are we going to address these problems? Is socialism the answer?"
- BRA_nosso_povo: "Nosso Povo"
- BRA_nosso_povo_desc: "Our Country, or nosso povo, is not a wealthy one. We are not the strongest, however, we have the potential to do right by our people."
+ BRA_nossa_economia_desc: "La crise financière asiatique de 1997 a créé une faille entre les marchés économiques mondiaux. Les bénéfices du Brésil grâce à son ndustry focalisée sur l'export ont grandement aminci et les réformes de Cardoso n'ont pas réussi à mitiger les dégâts de manière efficace. Il est temps d'encourager la croissance pour faire machine arière sur ce désastre économique des plus malheureux !"
+ BRA_the_internal: "Marcher vers le socialisme"
+ BRA_the_internal_desc: "Notre pays est submergé par les problèmes. Comment sommes-nous supposés répondre à ceux-ci ? Le socialisme est-il la réponse ?"
+ BRA_nosso_povo: "Nosso povo"
+ BRA_nosso_povo_desc: "Notre pays, ou « nosso povo », n'est pas des plus riches. Ni l'un des plus puissants, seulement, nous avons le potentiel de bien plus grâce à notre peuple."
  BRA_pay_back_the_imf: "Pay Back the IMF"
  BRA_pay_back_the_imf_desc: "The loan that was signed in must be paid back in full. Brazil must unbind itself from foreign institutions."
  BRA_brazilian_exports: "Brazilian Exports"
