--- a/localisation/french/MD_focus_CAN_l_french.yml
+++ b/localisation/french/MD_focus_CAN_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- canada_focus: "Canadian Focus Tree"
+ canada_focus: "Priorités nationales canadiennes"
  CAN_Canadian_Economy: "Canadian Economy"
  CAN_Canadian_Economy_desc: "The Canadian economy is the tenth largest economy in the world by GDP. It is predominantly a service economy which employs around 3/4th of the entire country's work force. Furthermore, it also has the third highest total estimated value of natural resources as well as the world's third largest petroleum reserves."
  CAN_Prospects_Oil: "Oil Prospects"
