--- a/localisation/french/MD_focus_CHE_l_french.yml
+++ b/localisation/french/MD_focus_CHE_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- chechnya_focus: "Chechnya Focus Tree"
+ chechnya_focus: "Priorités nationales Tchétchénie"
  CHE_establish_loyal_government: "Suppress Political Opposition"
  CHE_establish_loyal_government_desc: "We need to suppress any pockets of dissent, there should be no other opinion than the opinion of our president"
  CHE_strengthen_ties_moscow: "Strengthen Ties with Moscow"
