--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- cuba_focus: "Cuban Focus Tree"
+ cuba_focus: "Priorités nationales cubain"
  CUB_parlament_one: "§GThe dismissal of officials and the creation of a new parliament will begin§!"
  raul_strenght_power_tt: "§GRaul will strengthen his position in the party§!"
  CUB_allow_elections_tt: "§GElections will be allowed§!"
