--- a/localisation/french/MD_focus_ENG_l_french.yml
+++ b/localisation/french/MD_focus_ENG_l_french.yml
@@ -1,25 +1,25 @@
 ﻿l_french:
- united_kingdom_focus: "United Kingdom Focus Tree"
- ENG_vitalize_westminster: "Vitalize Westminster"
- ENG_vitalize_westminster_desc: "The House of Commons, the British lower house, is sometimes called a 'talking parliament', where conversation is constant, but action not so much. Labour and Tories should try to establish new, more distinct positions in order to stay appealing to the common man."
- ENG_the_future_of_britain: "The Future of Britain"
- ENG_the_future_of_britain_desc: "The ideological foundation of Britain is one of deep believe in personal freedoms and democracy - in something called the Anglo-Saxon principles and admired across the world.\n\nWe will need to consider whether Anglo-Saxon principles are the way to go - or whether a new path is necessary."
- ENG_british_armed_forces: "British Armed Forces"
- ENG_british_armed_forces_desc: "The troops of the crown have marched across the world in the last 500 years. We will need to send the British Armed Forces into the boot camps again so that we may be ready for future conflict - both in self-defense and on the attack."
- ENG_economic_stimulus: "Economic Stimulus"
- ENG_economic_stimulus_desc: "Britain's constantly switching political landscape has left local businesses uncertain of success. While the Tories are opposed to government intervention in the economy, we might need to take some steps that may be perceived as leftist in order to artificially develop our economic might again."
- ENG_political_reform: "Political Reform"
- ENG_political_reform_desc: "Our ministries are somewhat ineffective. With just the right amount of reforms, we might resolve those issues."
- ENG_democratic_tradition: "Democratic Tradition"
- ENG_democratic_tradition_desc: "Sure, the Tories and Labour might not agree on everything, but they both are right on the necessity for democracy and freedom for all Britons. We should honor our democratic traditions."
- ENG_a_new_path: "A new Path"
- ENG_a_new_path_desc: "Our representatives have sat idle for too long. Representation is useless without people willing to do it. A more authoritarian approach just might be in order."
- ENG_focus_on_the_army: "Focus on the Army"
- ENG_focus_on_the_army_desc: "The navy might be able to defend us quite sufficiently, but how we are supposed to liberate people and their oilfields from authoritarianism without a strong land force? We need to invest into our Land Forces."
- ENG_focus_on_the_navy: "Focus on the Navy"
- ENG_focus_on_the_navy_desc: "Let's be real here: We are an island nation. We don't need tanks, howitzers or APCs. What do we need? Submarines, Cruisers, Destroyers, Aircraft Carriers, the entire arsenal. We shall deploy our righteous fury from above, on and below the water. We need to invest in our Naval Forces."
- ENG_english_industry: "English Industry"
- ENG_english_industry_desc: "England is the birthplace of the industrial revolution, but has since fallen a bit behind in terms of industrial output. Giving them a bit of encouragement might be just what we need."
+ united_kingdom_focus: "Priorités nationales britanniques"
+ ENG_vitalize_westminster: "Vitaliser Westminster"
+ ENG_vitalize_westminster_desc: "La Chambre des communes, la chambre basse britannique, est parfois qualifiée de « parlement bavard », où la conversation est constante, mais pas l'action. Les travaillistes et les conservateurs devraient essayer d'établir de nouvelles positions, plus distinctes, afin de rester attrayants pour le commun des mortels."
+ ENG_the_future_of_britain: "Le futur du Royaume-Uni"
+ ENG_the_future_of_britain_desc: "Le fondement idéologique du Royaume-Uni est une croyance profonde dans les libertés individuelles et la démocratie - dans ce que l'on appelle les principes anglo-saxons et qui sont admirés dans le monde entier.\n\nNous devrons nous demander si les principes anglo-saxons sont la voie à suivre - ou si une nouvelle voie est nécessaire."
+ ENG_british_armed_forces: "Forces armées britanniques"
+ ENG_british_armed_forces_desc: "Les troupes de la couronne ont marché à travers le monde au cours des 500 dernières années. Nous devrons à nouveau envoyer les forces armées britanniques dans les camps d'entraînement afin d'être prêts pour les conflits futurs - tant pour l'autodéfense que pour l'attaque."
+ ENG_economic_stimulus: "Stimulus économique"
+ ENG_economic_stimulus_desc: "Le paysage politique britannique en perpétuel changement a laissé les entreprises locales dans l'incertitude du succès. Alors que les Tories sont opposés à l'intervention du gouvernement dans l'économie, nous pourrions avoir besoin de prendre certaines mesures qui pourraient être perçues comme étant de gauche afin de développer artificiellement notre puissance économique à nouveau."
+ ENG_political_reform: "Réforme politique"
+ ENG_political_reform_desc: "Nos ministères sont quelque peu inefficaces. Avec juste la bonne quantité de réformes, nous pourrions résoudre ces problèmes."
+ ENG_democratic_tradition: "La tradition démocratique"
+ ENG_democratic_tradition_desc: "Bien sûr, les conservateurs et les travaillistes ne sont peut-être pas d'accord sur tout, mais ils ont tous deux raison sur la nécessité de la démocratie et de la liberté pour tous les Britanniques. Nous devons honorer nos traditions démocratiques."
+ ENG_a_new_path: "Une nouvelle voie"
+ ENG_a_new_path_desc: "Nos représentants sont restés inactifs pendant trop longtemps. La représentation est inutile si les gens ne sont pas prêts à la faire. Une approche plus autoritaire pourrait bien être de mise."
+ ENG_focus_on_the_army: "Priorité à l'armée"
+ ENG_focus_on_the_army_desc: "La marine est peut-être capable de nous défendre suffisamment, mais comment sommes-nous censés libérer les gens et leurs champs de pétrole de l'autoritarisme sans une force terrestre forte ? Nous devons investir dans nos forces terrestres."
+ ENG_focus_on_the_navy: "Priorité à la Royal Navy"
+ ENG_focus_on_the_navy_desc: "Soyons réalistes : Nous sommes une nation insulaire. Nous n'avons pas besoin de chars, d'obusiers ou de véhicules blindés. De quoi avons-nous besoin ? Sous-marins, croiseurs, destroyers, porte-avions, tout l'arsenal. Nous déploierons notre furie vertueuse depuis le haut, le bas et le haut de l'eau. Nous devons investir dans nos forces navales."
+ ENG_english_industry: "Industrie anglaise"
+ ENG_english_industry_desc: "L'Angleterre est le berceau de la révolution industrielle, mais elle a depuis pris un peu de retard en termes de production industrielle. Leur donner un peu d'encouragement pourrait être juste ce dont nous avons besoin."
  ENG_scottish_industry: "Scottish Industry"
  ENG_scottish_industry_desc: "Scotland has place for more industry close to its rich resources. Building more industry in Scotland might be just what we need."
  ENG_imperial_industry: "Imperial Industry"
