--- a/localisation/french/MD_focus_EST_l_french.yml
+++ b/localisation/french/MD_focus_EST_l_french.yml
@@ -1,16 +1,16 @@
 ﻿l_french:
- EST_focus_tree: "Estonian Focus Tree"
- EST_estonias_future: "Estonia's Future"
- EST_estonias_future_desc: "Our nations future lies in the unknown, it is time for us to mold our country into what we want it to be."
- EST_looking_to_the_west: "Democracy of Estonia"
- EST_looking_to_the_west_desc: "Estonia is a short-lived democracy hailing from the collapse of the Soviet Union. Still, it continues to align its values with Western Liberal Democracy, and as such, many of the parties follow this alignment. The parties on the Estonian political spectrum follow much of the same ideological trends you'd see in much of the West."
+ EST_focus_tree: "Priorités nationales estonien"
+ EST_estonias_future: "L'avenir de l'Estonie"
+ EST_estonias_future_desc: "L’avenir de notre nation réside dans l’inconnu, il est temps pour nous de façonner notre pays comme nous voulons qu’il soit."
+ EST_looking_to_the_west: "Démocratie de l'Estonie"
+ EST_looking_to_the_west_desc: "L’Estonie est une démocratie éphémère issue de l’effondrement de l’Union soviétique. Néanmoins, il continue d’aligner ses valeurs sur celles de la démocratie libérale occidentale et, à ce titre, de nombreux partis suivent cet alignement. Les partis de l’échiquier politique estonien suivent en grande partie les mêmes tendances idéologiques que l’on retrouve dans une grande partie de l’Occident."
  EST_isamaa: "Isamaa"
- EST_isamaa_desc: "Isamaa, directly translates into the 'Fatherland'. Isamaa is a Christian democratic party, that seeks to promote Centre-right to Right-wing ideology in Estonia."
- EST_re: "The ER"
- EST_re_desc: "The Reformist Party of Estonia is a center-right political party focusing on liberal economic policies and support for NATO and European Union membership. It was founded in 1994 and currently holds the most seats in the Estonian parliament, making it the largest political party in Estonia. Their goals include lowering taxes, increasing privatization, and promoting entrepreneurship."
+ EST_isamaa_desc: "Isamaa, se traduit directement par « Patrie ». Isamaa est un parti chrétien-démocrate qui cherche à promouvoir l'idéologie du centre-droit à la droite en Estonie."
+ EST_re: "Le Parti réformateur"
+ EST_re_desc: "Le Parti réformiste d'Estonie est un parti politique de centre-droit axé sur les politiques économiques libérales et le soutien à l'adhésion à l'OTAN et à l'Union européenne. Il a été fondé en 1994 et détient actuellement le plus grand nombre de sièges au parlement estonien, ce qui en fait le plus grand parti politique d'Estonie. Leurs objectifs incluent la réduction des impôts, l’augmentation de la privatisation et la promotion de l’entrepreneuriat."
  EST_neutral_desc: ""
- EST_armed_forces: "Estonian Defence Forces"
- EST_armed_forces_desc: "The Estonian Defence Forces consists of all branches of the Estonian military, its primary goal being the preservation of Estonian independence and sovereignty as well as constitutional order. As it stands currently the military could use more attention if we wish for it to remain relevant in the 21st century."
+ EST_armed_forces: "Forces de défense estoniennes"
+ EST_armed_forces_desc: "Les Forces de défense estoniennes comprennent toutes les branches de l'armée estonienne, leur objectif principal étant la préservation de l'indépendance et de la souveraineté estoniennes ainsi que de l'ordre constitutionnel. Dans l’état actuel des choses, l’armée pourrait bénéficier de plus d’attention si nous souhaitons qu’elle reste pertinente au 21e siècle."
  EST_ekre: "The EKRE"
  EST_ekre_desc: "In a major upset, the EKRE was able to come on top in the Elections and secure power for themselves. But for us, estonian patriots, it is a historical victory for no longer will our ideals and ideas be held back by foreign machinations."
  EST_above_all: "Estonia Above All!"
