--- a/localisation/french/MD_focus_GER_l_french.yml
+++ b/localisation/french/MD_focus_GER_l_french.yml
@@ -1,11 +1,11 @@
 ﻿l_french:
- germany_focus: "Germany Focus Tree"
+ germany_focus: "Priorités nationales de l'Allemagne"
  GER_schroeder_1: "Kabinett Schröder"
- GER_schroeder_1_desc: "After 16 years of CDU/CSU rule with help of the FDP, the SPD together with B90/Grüne formed a coalition to end the 'Ära Kohl'. Gerhard Schröder became appointed Bundeskanzler by the President and already announced plans to reform Germany and its economy to prepare the country for its future."
- GER_johannes_rau: "Brother John"
- GER_johannes_rau_desc: "Johannes Rauch gained his nickname because of his strong protestant faith. His personal motto is 'to reconcile, not divide' which underlines his policy, from the time he was one of the first to strongly propose german unification until today where many hope he can stop the division between the political groups in Germany."
- GER_appease_green_party: "§GAppease Our Coalition Partner§!"
- GER_appease_green_party_desc: "Before we formed an coalition we promised the greens some reforms. Failing to do so in time can led to the break-up of the coalition and the need for early new elections, so we better keep them in line to have the necessary majority to push our own reforms."
+ GER_schroeder_1_desc: "Après 16 ans de règne de la CDU/CSU avec l'aide du FDP, le SPD et B90/Grüne ont formé une coalition pour mettre fin à « Ära Kohl ». Gerhard Schröder a été nommé Bundeskanzler par le président et a déjà annoncé son intention de réformer l'Allemagne et son économie afin de préparer le pays à son avenir."
+ GER_johannes_rau: "Frère Jean"
+ GER_johannes_rau_desc: "Johannes Rauch doit son surnom à sa forte foi protestante. Sa devise personnelle est « réconcilier, pas diviser », qui sous-tend sa politique, depuis le moment où il a été l'un des premiers à proposer avec force l'unification allemande jusqu'à aujourd'hui où beaucoup espèrent qu'il puisse mettre fin à la division entre les groupes politiques en Allemagne."
+ GER_appease_green_party: "§GApaiser notre partenaire de la coalition§!"
+ GER_appease_green_party_desc: "Avant de former une coalition, nous avions promis aux Verts certaines réformes. Ne pas le faire à temps peut conduire à l’éclatement de la coalition et à la nécessité de nouvelles élections anticipées. Nous ferions donc mieux de les maintenir en ligne pour obtenir la majorité nécessaire pour faire avancer nos propres réformes."
  GER_appease_greens_tt: "§YThis will help to keep the§! §GGreens§! §Yin line.§!"
  GER_otto_schilly: "Defender Of Law And Order"
  GER_otto_schilly_desc: "Otto Schily knows what to do when something bad happens. His harsh and restrictive policies gave him over time the nickname he has today, some even call him a true CDU politician, rather than from the SPD."
