--- a/localisation/french/MD_focus_GRE_l_french.yml
+++ b/localisation/french/MD_focus_GRE_l_french.yml
@@ -1,19 +1,19 @@
 ﻿l_french:
- greece_focus: "Greek Focus Tree"
- earthquake_diplomacy: "Earthquake Diplomacy"
- airspace_violations: "Airspace Violations"
- GRE_debt_crisis: "Debt Crisis"
- GRE_debt_crisis_desc: "Greece has 300 billion dollars in external debt - one of the largest in the world. This has created a huge problem for us, as the debt is rapidly rising and creating massive problems for our economy. We will have to find a way to solve the debt problem before it gets out of hand."
- GRE_debt_crisis2: "Debt Crisis"
- GRE_debt_crisis2_desc: "Greece has 300 billion dollars in external debt - one of the largest in the world. This has created a huge problem for us, as the debt is rapidly rising and creating massive problems for our economy. We will have to find a way to solve the debt problem before it gets out of hand."
- GRE_debt_crisis3: "Debt Crisis"
- GRE_debt_crisis3_desc: "Greece has 300 billion dollars in external debt - one of the largest in the world. This has created a huge problem for us, as the debt is rapidly rising and creating huge problems for our economy. We will have to find a way to solve the debt problem before it gets out of hand."
- GRE_legacy: "Greek Legacy"
- GRE_legacy_desc: "Greece has a rich history, the rise and fall of many empires. After the loss of Byzantium we lost control of our homeland. Ever since 1821 we have promised such a loss would never befall the Greek people again."
- GRE_legacy2: "Greek Legacy"
- GRE_legacy2_desc: "Greece has a rich history, the rise and fall of many empires. After the loss of Byzantium we lost control of our homeland. Ever since 1821 we have promised such a loss would never befall the Greek people again."
- GRE_constitutional_crisis: "Constitutional Crisis"
- GRE_constitutional_crisis_desc: "The Constitution is the last thing we need to deal with before finally solidifying ourselves in power and rebuilding Greece the way we envision it."
+ greece_focus: "Priorités nationales grec"
+ earthquake_diplomacy: "Diplomatie sismique"
+ airspace_violations: "Violations de l'espace aérien"
+ GRE_debt_crisis: "Crise de la dette"
+ GRE_debt_crisis_desc: "La Grèce a une dette extérieure de 300 milliards de dollars, l'une des plus importantes au monde. Cela nous pose un énorme problème, car la dette augmente rapidement et crée d’énormes problèmes pour notre économie. Nous devrons trouver un moyen de résoudre le problème de la dette avant qu’il ne devienne incontrôlable."
+ GRE_debt_crisis2: "Crise de la dette"
+ GRE_debt_crisis2_desc: "La Grèce a une dette extérieure de 300 milliards de dollars, l'une des plus importantes au monde. Cela nous pose un énorme problème, car la dette augmente rapidement et crée d’énormes problèmes pour notre économie. Nous devrons trouver un moyen de résoudre le problème de la dette avant qu’il ne devienne incontrôlable."
+ GRE_debt_crisis3: "Crise de la dette"
+ GRE_debt_crisis3_desc: "La Grèce a une dette extérieure de 300 milliards de dollars, l'une des plus importantes au monde. Cela nous pose un énorme problème, car la dette augmente rapidement et crée d’énormes problèmes pour notre économie. Nous devrons trouver un moyen de résoudre le problème de la dette avant qu’il ne devienne incontrôlable."
+ GRE_legacy: "L'héritage grec"
+ GRE_legacy_desc: "La Grèce a une histoire riche, marquée par la montée et la chute de nombreux empires. Après la perte de Byzance, nous avons perdu le contrôle de notre patrie. Depuis 1821, nous avons promis qu’une telle perte n’arriverait plus jamais au peuple grec."
+ GRE_legacy2: "L'héritage grec"
+ GRE_legacy2_desc: "La Grèce a une histoire riche, marquée par la montée et la chute de nombreux empires. Après la perte de Byzance, nous avons perdu le contrôle de notre patrie. Depuis 1821, nous avons promis qu’une telle perte n’arriverait plus jamais au peuple grec."
+ GRE_constitutional_crisis: "Crise constitutionnelle"
+ GRE_constitutional_crisis_desc: "La Constitution est la dernière chose à laquelle nous devons nous attaquer avant de finalement nous solidifier au pouvoir et de reconstruire la Grèce comme nous l’envisageons."
  GRE_glass_cannon: "Glass Cannon Economics"
  GRE_glass_cannon_desc: "Our economy does especially well during times of growth."
  GRE_glass_cannon_2: "Glass Cannon Economics"
