--- a/localisation/french/MD_focus_HEZ_l_french.yml
+++ b/localisation/french/MD_focus_HEZ_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- hez_focus: "Hezbollah Focus Tree"
+ hez_focus: "Priorités nationales du Hezbollah"
  HEZ_Party_of_God: "§YParty of God§!"
  HEZ_Party_of_God_desc: "We, the fighters of the Levant, the ones who sacrificed themselves in the path of liberation in Lebanon and West Asia, are the party of God, The Hezbollah. Today, our insurrection stands in a very important state. We are in a situation that can change the future of us and Lebanon, or even the whole region... and the time for choosing is nigh. The Destiny of Resistance awaits us... "
  HEZ_Our_own_state: "Our Own State"
