--- a/localisation/french/MD_focus_MLR_l_french.yml
+++ b/localisation/french/MD_focus_MLR_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- malorossiya_focus: "Les centres d'intérêt de la Malorossiya"
+ malorossiya_focus: "Priorités nationales de la Malorossiya"
  MLR_ukr_modifier: "Malorosskaya Politique"
  MLR_ukr_modifier_desc: "La Malorossiya est un État de création relativement récente, dont la politique intérieure et extérieure est entièrement subordonnée à Moscou, mais qui jouit d'une grande autonomie en matière de politique intérieure et extérieure."
  MLR_ukr_modifier_tt_intro: "Modifier §Y$MLR_ukr_modifier$§! par"
