--- a/localisation/french/MD_focus_NIG_l_french.yml
+++ b/localisation/french/MD_focus_NIG_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- nigeria_focus: "Nigerian Focus Tree"
+ nigeria_focus: "Priorités nationales nigérian"
  NIG_religious_divide: "Religious Divide"
  NIG_religious_divide_desc: "Nigeria is fraught with religious tension and violence. Our people remain split between the Christian and Islamic faiths. We must come up with a solution, or we may face serious consequences. The decisions we make will define generations to come."
  NIG_nigerian_sects: "Nigerian Sects"
