--- a/localisation/french/MD_focus_NKO_l_french.yml
+++ b/localisation/french/MD_focus_NKO_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- north_korea_focus: "North Korea Focus Tree"
+ north_korea_focus: "Priorités nationales sur la Corée du Nord"
  NKO_prioritize_to_solve_famine: "Prioritize to Solve Famine"
  NKO_prioritize_to_solve_famine_desc: "Ensuring that our people are well-fed and clothed must be our first priority."
  NKO_prioritize_songun: "Prioritize the Songun"
