--- a/localisation/french/MD_focus_NOR_l_french.yml
+++ b/localisation/french/MD_focus_NOR_l_french.yml
@@ -1,7 +1,7 @@
 ﻿l_french:
- norway_focus: "Norway Focus Tree"
- NOR_the_norwegian_economy: "The Norwegian Economy"
- NOR_the_norwegian_economy_desc: "The Norwegian economy is one of diversity, resources and more. We must explore options for our economy to lead us into the new millennia to set Norway on the path of greatness."
+ norway_focus: "Priorités nationales de la Norvège"
+ NOR_the_norwegian_economy: "L'économie norvégienne"
+ NOR_the_norwegian_economy_desc: "L’économie norvégienne est faite de diversité, de ressources et bien plus encore. Nous devons explorer les options permettant à notre économie de nous conduire vers le nouveau millénaire et de mettre la Norvège sur la voie de la grandeur."
  NOR_north_sea_oil: "North Sea Oil"
  NOR_north_sea_oil_desc: "To sustain our expensive policies we need to maintain a steady flow of our already rich supply of oil and gas. On this occasion, we must say 'Drill Baby Drill!'"
  NOR_increased_cooperation_with_uk: "Increased Cooperation With the U.K."
