--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- iran_focus: "Iranian Focus tree"
+ iran_focus: "Priorités nationales iranien"
  PER_NEW_LINE_TOOLTIP: " \n"
  PER_the_third_development_plan: "Le troisième plan de développement"
  PER_the_third_development_plan_desc: "Le troisième plan de développement (post-révolution) comprenait des mesures et des actions visant à restructurer l'économie iranienne dominée par l'État vers un système de marché orienté vers le monde, ainsi que des mesures traitant des politiques intérieures et étrangères, de la sécurité nationale et des efforts culturels. Cependant, c'est trop de choses à réaliser de manière réaliste en 5 ans, nous devons donc nous concentrer sur la partie du plan à réaliser."
@@ -560,8 +560,6 @@
  PER_ask_russia_to_embargo_turkey_desc: "Who likes Turkey? *Clap clap clap-clap-clap* It's not us three! *Clap clap clap-clap-clap*"
  PER_ask_armenia_to_embargo_turkey: "Ask Armenia To Embargo Turkey"
  PER_ask_armenia_to_embargo_turkey_desc: "Who likes Turkey? *Clap clap clap-clap-clap* It's not us three! *Clap clap clap-clap-clap*"
- PER_ban_turkey_from_gas: "Ban Turkey From Gas"
- PER_ban_turkey_from_gas_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
  PER_denounce_turkey_in_medias: "Denounce Turkey In Medias"
  PER_denounce_turkey_in_medias_desc: "We are so gonna ratio Turkey with this great tweet :Turkey, more like... No!"
  PER_start_the_islamic_propaganda: "Start The Islamic Propaganda"
@@ -5513,3 +5511,5 @@
  iran_md.245.d: "As a result of the devestating conflict currently raging in Afghanistan, many people have decided to flee their homes and make a daring attempt to flee into Iran. As a result, our infrastructure in the Eastern regions have come under stress, and some people within our nation are less accepting of foreigners entering Iran, even if its for refuge."
  iran_md.245.a: "They are welcome here"
  iran_md.245.b: "Iran is full, sorry"
+ PER_ban_gas_sales_to_turkey: "Ban on Gas sales to Turkey"
+ PER_ban_gas_sales_to_turkey_desc: "Turkey does not deserve the gas we produce! We should ban them from purchasing it from our markets and pipelines!"
