--- a/localisation/french/MD_focus_PMR_l_french.yml
+++ b/localisation/french/MD_focus_PMR_l_french.yml
@@ -1,17 +1,17 @@
 ﻿l_french:
- PMR_focus: "Transnistria Focus Tree"
+ PMR_focus: "Priorités nationales sur la Transnistrie"
  PMR_russians: "L'identité russe"
  PMR_russians2: "L'identité russe"
  PMR_russians3: "L'identité russe"
  PMR_russians4: "L'identité russe"
- PMR_academy_air: "Transnistrian Air Academy"
- PMR_academy_army: "Suvorov Military School"
+ PMR_academy_air: "Académie aérienne de Transnistrie"
+ PMR_academy_army: "École militaire Souvorov"
  PMR_new_army2: "L'armée russe"
- PMR_aggresive_foreign_policy_idea: "Aggressive Russian Policy"
- PMR_support_smugglers: "Financial Support To Smugglers"
- PMR_support_smugglers2: "Financial Support To Smugglers"
- PMR_contraband_empire: "Contraband Empire"
- PMR_highway_focus: "Highway Focus"
+ PMR_aggresive_foreign_policy_idea: "Politique russe agressive"
+ PMR_support_smugglers: "Soutien financier aux passeurs"
+ PMR_support_smugglers2: "Soutien financier aux passeurs"
+ PMR_contraband_empire: "Empire de contrebande"
+ PMR_highway_focus: "Focus sur l'autoroute"
  PMR_forts_buildings: "Forts Buildings"
  PMR_russian_trainers: "Russian Trainers"
  PMR_disorganized_army: "Outdated Army"
