--- a/localisation/french/MD_focus_SMA_l_french.yml
+++ b/localisation/french/MD_focus_SMA_l_french.yml
@@ -1,11 +1,11 @@
 ﻿l_french:
- SMA_focus: "San Marino Focus tree"
- SMA_economy: "Our Economy"
- SMA_economy_desc: "San Marino's economy is negligible and only our decisions can somehow improve it and get on par with at least Liechtenstein."
- SMA_start_buildings: "Commission Construction Companies"
- SMA_start_buildings_desc: "Only by vigorously developing the construction industry can our tiny country further develop and move towards the future."
- SMA_civil_industry: "Fiat Factories"
- SMA_civil_industry_desc: "We can get our friends in Italy to send over FIAT to produce some vehicles in San Marino, and help both of our economies."
+ SMA_focus: "Priorités nationales de Saint-Marin"
+ SMA_economy: "Notre économie"
+ SMA_economy_desc: "L'économie de Saint-Marin est négligeable et seules nos décisions peuvent l'améliorer d'une manière ou d'une autre et la mettre au niveau au moins de celle du Liechtenstein."
+ SMA_start_buildings: "Entreprises de construction de commissions"
+ SMA_start_buildings_desc: "Ce n'est qu'en développant vigoureusement le secteur de la construction que notre petit pays pourra se développer davantage et se tourner vers l'avenir."
+ SMA_civil_industry: "Usines Fiat"
+ SMA_civil_industry_desc: "Nous pouvons demander à nos amis italiens d'envoyer FIAT produire des véhicules à Saint-Marin et aider nos deux économies."
  SMA_building_slot: "Land Redistribution"
  SMA_building_slot_desc: "Since every inch of land in our country is precious, every bit of land must be put to its fullest use."
  SMA_roads: "City Street Rehabilitation Project"
