--- a/localisation/french/MD_focus_SOV_l_french.yml
+++ b/localisation/french/MD_focus_SOV_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- russia_focus: "Russian Focus Tree"
+ russia_focus: "Priorités nationales russe"
  SOV_reign_of_yeltsin: "The Reign of Boris Yeltsin"
  SOV_reign_of_yeltsin_desc: "Boris Yeltsin was the first President of the newly-created Russian Federation, the successor state to the USSR, from 1991 to 1999. He presided over huge economic trouble and a disastrous war in Chechnya, and on December 31st, 1999, handed his post over to Prime Minister Vladimir Putin."
  SOV_presidential_election_of_2000: "The 2000 Elections"
