--- a/localisation/french/MD_focus_SUB_l_french.yml
+++ b/localisation/french/MD_focus_SUB_l_french.yml
@@ -1,6 +1,6 @@
 ﻿l_french:
- russian_subjects_focus_tree: "Tree of Focuses of the Subject of Russia"
- crimea_focus: "Tree of Focuses of Crimea"
+ russian_subjects_focus_tree: "Priorités nationales du sujet de la Russie"
+ crimea_focus: "Priorités nationales de Crimée"
  SUB_start: "Adopt the Constitution of Russia"
  SUB_start_desc: "We are ready to fully adopt the Constitution of Russia"
  SUB_start_industry: "Start Reviving The Industry"
@@ -1147,8 +1147,8 @@
  KHM_Russia_communism: "Russian Confederation"
  KHM_Russia_nationalist: "Russian National State"
  KHM_Russia_neutrality: "Russian Union"
- khanti_mansi_focus: "Tree of Focuses of Ugra"
- tatarstan_focus: "Tree of Focuses of Tatarstan"
+ khanti_mansi_focus: "Priorités nationales d'Ugra"
+ tatarstan_focus: "Priorités nationales du Tatarstan"
  KHM_zhir: "LDPR's Policy"
  KHM_edro_idea: "United Russia Policy"
  KHM_edro_super: "Ideal Political Machine"
