--- a/localisation/french/MD_focus_TUR_l_french.yml
+++ b/localisation/french/MD_focus_TUR_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- turkey_focus: "Turkish Focus Tree"
+ turkey_focus: "Priorités nationales turc"
  TUR_APC_TECH: "APC Technology"
  TUR_industry: "Industrial Technology"
  TUR_AFV_TECH: "AFV Technology"
