--- a/localisation/french/MD_focus_USA_l_french.yml
+++ b/localisation/french/MD_focus_USA_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- united_states_focus: "United States Focus Tree"
+ united_states_focus: "Priorités nationales des États-Unis"
  USA_focus_ending_clintonomics: "The Ending Stages of Clintonomics"
  USA_focus_ending_clintonomics_desc: "The ending months of the administration are upon us and as such we should start gearing up for the next election."
  USA_focus_enjoy_surplus: "Enjoying a Continued Surplus"
