--- a/localisation/french/MD_focus_USB_l_french.yml
+++ b/localisation/french/MD_focus_USB_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- free_states_of_america_focus: "Free States of America Focus Tree"
+ free_states_of_america_focus: "Priorités nationales des États libres d’Amérique"
  free_america_focus_establishing_a_govt: "Establishing A Government"
  free_america_focus_establishing_a_govt_desc: "Chaos consumes the streets, we must secure a central command of civil government if we are to even think of doing anything."
  free_america_focus_creating_a_police_force: "Creating A Police Force"
