--- a/localisation/french/MD_focus_VEN_l_french.yml
+++ b/localisation/french/MD_focus_VEN_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- venezuela_focus: "Venezuelan Focus Tree"
+ venezuela_focus: "Priorités nationales vénézuélien"
  VEN_reap_the_fruits: "Reap The Fruits"
  VEN_reap_the_fruits_desc: "In the heart of South America, Venezuela stands on the precipice of a new era. The oil-rich nation has long been a tantalizing prize for global powers, drawn to its vast energy reserves like moths to a flame. But it is time for Venezuela to chart its own destiny, to reap the fruits of its natural wealth and emerge as a regional powerhouse."
  VEN_our_president: "President Chávez"
