--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -1797,7 +1797,7 @@
  BLR_zavod558_create_TT: "§Y588飞机修理厂决议§!现已提供飞机维修合同"
  BLR_chi_coop_mil_TT: "我们的工厂和企业将能够将产品销售给§Y朝鲜§!"
  belarus_export.3.a: "白俄罗斯武器的荣耀"
- belarus_export.6.t: "我们提议购买白俄罗斯拖拉机"
+ belarus_export.6.t: "白俄罗斯向我们提供拖拉机销售建议"
  belarus_export.6.d: "白俄罗斯明斯克拖拉机工厂向我们提供购买他们的产品 - 他们最新的拖拉机。他们将完美地帮助我们发展农产品工业。"
  belarus_export.6.a: "我们同意购买他们。"
  belarus_export.6.b: "我们不需要他们"
