--- a/localisation/simp_chinese/MD_focus_FIJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_FIJ_l_simp_chinese.yml
@@ -611,3 +611,4 @@
  Dr_Padma_Narsey_Lal_desc: "帕德玛·纳西·拉尔，1951年出生，就读于南太平洋大学，获得科学、生态学和生物化学硕士学位。她是第一位进入该大学的古吉拉特女性。1971年，她荣获第一届南太平洋大学金质奖章。她还获得了澳大利亚国立大学资源和环境研究硕士学位以及夏威夷大学马诺阿分校农业和资源经济学博士学位。帕德玛·拉尔最初是斐济政府的公务员，后来进入研究和研究管理职位。她曾担任太平洋岛屿论坛秘书处可持续发展顾问、国际自然保护联盟海洋区域办事处首席技术顾问。拉尔还曾在澳大利亚联邦政府（包括澳大利亚国际农业研究中心）担任高级职务。"
  King_Sitiveni_I_desc: "西蒂维尼·拉布卡现在被正式授予苏瓦王室国王西蒂维尼一世的头衔。领导成员和一些人认为可能是苏瓦家族的创始人。拉布卡因其政治和军事生涯而声名鹊起并留下了遗产，并以某种方式参与了该国几乎每一次政变。稳定、秩序、和平……这三大支柱是拉布卡努力保持的，通过这条新道路，许多人想知道他是否能够创造真正的遗产。"
  King_Sitiveni_II_desc: "乔吉·孔罗特现已正式被授予苏瓦王室国王西蒂维尼二世 的称号。这位前少将和政治家是在政变后时代的第一个选举周期中由人民选出的。西蒂维尼这个名字是王室议会的一个象征。其象征是一位主要成员和一些人认为可能是苏瓦家族的创始人西蒂维尼·拉布卡。随着命名惯例被设定为先例，许多人想知道以下领导者是否会选择这个符号，或者可能在数字游戏中提出自己的主张。"
+ fiji_focus: "斐济国策树"
