--- a/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
@@ -3451,3 +3451,4 @@
  poland.172.t: "俄国支付战争赔款"
  poland.172.d: "俄罗斯政府决定向波兰偿还因第二次世界大战和共产主义统治而产生的所有未偿赔款。俄罗斯公民赞扬政府的决定，为加强波兰与俄罗斯的关系又迈出了一步。"
  poland.172.a: "还好我们已经完成了"
+ polish_focus: "波兰国策树"
