--- a/localisation/simp_chinese/MD_focus_VTB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_VTB_l_simp_chinese.yml
@@ -87,7 +87,7 @@
  vitebsk_rus.10.d: "维捷布斯克共和国的领导层提供了一个整合选项，他们将成为一个拥有扩大权利的共和国，这与国家的其他主体不同"
  vitebsk_rus.10.a: "我们同意"
  vitebsk_rus.10.b: "我们不能接受这样的条件！"
- vitebsk_focus: "维捷布斯克人民共和国的国策"
+ vitebsk_focus: "维捷布斯克人民共和国国策树"
  VTB_National_Defense_Strategy: "国家防御战略"
  VTB_RUS_communism: "白俄罗斯"
  VTB_RUS_nationalist: "白俄罗斯"
