--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- belorussia_focus: "Belarusian Focus Tree"
+ belorussia_focus: "Priorités nationales biélorusse"
  BLR_west_way: "The Way to the East"
  BLR_west_way_desc: "It's time to choose our path. We will fully cooperate with our eastern neighbors and countries"
  BLR_china_friendship: "Partnership With China"
@@ -1403,7 +1403,6 @@
  BLR_kal_with: "CJSC\"Belarusian Potash Company\""
  BLR_kal_without: "JSC \"Belarusian Potash Company\""
  BLR_BRSM: "BRSM"
- BLR_BRSM1: "BRSM"
  BLR_Poles_goes: "Poles Leaving Belarus"
  BLR_Internet_Cencorship: "Internet Censorship"
  BLR_National_Security_Service: "National Security Service"
@@ -1821,7 +1820,7 @@
  belarus_export.4.t: "First Samples of \"Polonez\""
  belarus_export.4.d: "We have finally completed our MLRS \"Polonez\". Now we will be able to produce it for the needs of our army"
  belarus_export.4.a: "Glory to the Belarusian Weapons"
- belarus_export.6.t: "Belarus We Offer To Buy Tractors"
+ belarus_export.6.t: "Belarus Provide Tractors Sales Offer To Us"
  belarus_export.6.d: "The Belarusian MTZ plant offers us to buy their products - their newest tractor. They will perfectly help us in the development of our agro-industry"
  belarus_export.6.a: "We agree to purchase them"
  belarus_export.6.b: "We don't need them"
@@ -2235,7 +2234,7 @@
  BLR_belarus_nati11_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n £western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support: §R-5.00%§! \n\n"
  BLR_belarus_nati12_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n £foreign_influence_defense_modifier_texticon §YForeign Influence Defense§! Multiplier: §G+5.00%§! \n £drift_defence_texticon  Ideology drift defense: §G+3.00%§! \n £population_texticon  Monthly Population: §R-2.00%§! \n\n"
  BLR_belarus_nati13_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n  £political_power_texticon  Political Power Gain: §G+3.00%§! \n\n"
- BLR_belarus_nati14_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n  £political_power_texticon  Political Power Gain: §G+2.00%§! \n £consumer_goods_texticon  Tax Cost: §R-7.00%§! \n\n"
+ BLR_belarus_nati14_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n  £political_power_texticon  Political Power Gain: §G+2.00%§! \n £consumer_goods_texticon  Tax Cost: §G+7.00%§! \n\n"
  BLR_belarus_nati15_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n £war_support_modifiericons_texticon  War Support: §G+3.00%§! \n\n"
  BLR_belarus_nati16_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+10.00%§! \n £attack_texticon  Division Attack: §G+3.00%§! \n £defence_texticon  Division Defense: §G+3.00%§!  \n\n"
  BLR_belarus_nati17_tt: "$BLR_belarus_nati_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+10.00%§! \n £personnel_cost_multiplier_modifier_texticon §YMilitary Cost§! Multiplier: §R+15.00%§! \n £construction_speed_milfactory_texticon  §YMilitary Factory§! construction speed: §G+8.00%§!  \n\n"
@@ -2297,3 +2296,4 @@
  UKR_ukraine_ready_union_state: "§Y[?UKR.union_state|-0]§!"
  UKR_ukraine_readys_union_state: "§YPercentage§! of §Y[UKR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
  UKR_ukraine_notreadys_union_state: "§RUNAVAILABLE§!"
+ BLR_new_railways: "New Railways"
