--- a/localisation/french/MD_focus_BOS_l_french.yml
+++ b/localisation/french/MD_focus_BOS_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- Bosnia_focus: "Bosnian Focus Tree"
+ Bosnia_focus: "Priorités nationales bosnien"
  BOS_yugo_nost_completed: "Has completed Yugonostalgia"
  BOS_Anti_goverment_demonstrations: "Anti Government Demonstrations"
  BOS_Anti_goverment_demonstrations_info: "Many have taken to the streets over our actions."
