--- a/localisation/french/MD_focus_BRM_l_french.yml
+++ b/localisation/french/MD_focus_BRM_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- burma_focus: "Burmese Focus Tree"
+ burma_focus: "Priorités nationales birman"
  BRM_revisit_the_rohingya_issue: "Revisit the Rohingya Issue"
  BRM_revisit_the_rohingya_issue_desc: "The Muslims in Rakhine state who call themselves 'Rohingya' have been viewed with hostility by a large portion of the Buddhist majority. This animosity has led to tension, violence and foreign condemnation, and requires our attention."
  BRM_the_path_of_intolerance: "The Path of Intolerance"
