--- a/localisation/french/MD_focus_BUL_l_french.yml
+++ b/localisation/french/MD_focus_BUL_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- bulgaria_focus: "Bulgarian Focus Tree"
+ bulgaria_focus: "Priorités nationales bulgare"
  WHILE_FOCUSING: "While focusing on this, there will be the following effects:\n$EFF$"
  BUL_generic_political_effort: "Bulgarian Politics"
  BUL_generic_political_effort_desc: "In the year 2000, Bulgaria's political scene saw a dramatic shift as the conservative party, Union of Democratic Forces (UDF), lost power to the opposition Bulgarian Socialist Party (BSP). This marked the end of UDF's eight-year rule and the beginning of BSP's term in office. The new government prioritized economic reforms, focusing on improving the country's financial stability and attracting foreign investment. Despite initial public approval, the reforms proved to be slow and controversial."
