--- a/localisation/french/MD_focus_DEN_l_french.yml
+++ b/localisation/french/MD_focus_DEN_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- denmark_focus: "Danish Focus Tree"
+ denmark_focus: "Priorités nationales danois"
  DEN_army: "Hæren"
  DEN_army_desc: "The Royal Danish Army is the land-based military of our country and a vital part of our military as a whole. We should look into ways of expanding its abilities."
  DEN_expand_barracks: "Expand the Barracks"
