--- a/localisation/french/MD_focus_GCC_l_french.yml
+++ b/localisation/french/MD_focus_GCC_l_french.yml
@@ -1,5 +1,5 @@
 ﻿l_french:
- gulf_focus: "Gulf Focus Tree"
+ gulf_focus: "Priorités nationales du Golfe"
  GCC_socio_economic_affairs: "Socio-Economic Affairs"
  GCC_socio_economic_affairs_desc: "The economy and society of [ROOT.GetNameDef] yield interesting challenges. Many argue that our current dependence on oil is unsustainable and outsiders have criticized our policies towards foreign migrants. Moreover, voices from both within and without are clamoring for improvements in the rights of women."
  GCC_the_rentier_state: "The Rentier State"
