--- a/localisation/french/MD_focus_IND_l_french.yml
+++ b/localisation/french/MD_focus_IND_l_french.yml
@@ -1,7 +1,7 @@
 ﻿l_french:
- indonesia_focus: "Indonesian Focus Tree"
- IND_indonesias_future: "Indonesia's Future"
- IND_indonesias_future_desc: "As our nation enters the 21st century with all of its problems, we must find ways to tackle them and bring our nation the love it deserves!"
+ indonesia_focus: "Priorités nationales de l’Indonésie"
+ IND_indonesias_future: "L'avenir de l'Indonésie"
+ IND_indonesias_future_desc: "Alors que notre nation entre dans le 21ème siècle avec tous ses problèmes, nous devons trouver des moyens de les résoudre et d’apporter à notre nation l’amour qu’elle mérite !"
  IND_asia_financial_crisis: "Tackle the Crisis!"
  IND_asia_financial_crisis_desc: "The Financial Crisis has hit South East Asia hard since 1997, and our nation has not been spared of its crippling effects. We are now going to proceed with devising a plan on solving this problem"
  IND_japanese_aid: "Call for Japanese Aid"
